Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
5.12.3
-
-
3e716029ae61bf4c7bb33643ac331156e70e34f1 (qt/qtdeclarative/5.12)
Description
QJSEngine e; e.evaluate("\ o= {\ a:() => { const a = 42; return a; }\ }").toString() // "SyntaxError: Identifier a has already been declared" rather than "42" e.evaluate("\ const a = 42; \ const o = {\ a: () => { return a; } \ }; \ o.a()").toString() // "function a() { [native code] }" rather than "42" e.evaluate("\ const a = 42; \ const f = () => { return a; }; \ o = {a:f}; \ o.a()").toString() // "42"
Attachments
For Gerrit Dashboard: QTBUG-75880 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
262468,3 | Don't add local for anonymous function's "name" | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |