src/qml/compiler/qv4codegen.cpp
@@ -1061,6 +1061,7 @@ bool Codegen::visit(Expression *ast)
     TailCallBlocker blockTailCalls(this);
     statement(ast->left);
     blockTailCalls.unblock();
+    clearExprResultName(); // The name only holds for the left part
     accept(ast->right);
     return false;
 }
@@ -2523,7 +2524,7 @@ bool Codegen::visit(ObjectPattern *ast)
 
         {
             RegisterScope innerScope(this);
-            Reference value = expression(p->initializer);
+            Reference value = expression(p->initializer, name);
             if (hasError)
                 return false;
             value.loadInAccumulator();
@@ -2965,7 +2966,7 @@ int Codegen::defineFunction(const QString &name, AST::Node *ast,
         // already defined
         return leaveContext();
 
-    _context->name = name;
+    _context->name = name.isEmpty() ? currentExpr().result().name : name;
     _module->functions.append(_context);
     _context->functionIndex = _module->functions.count() - 1;
 
